# rust-grpc-web-react-template

./: README.md
client/: README.md  envoy.yaml  package-lock.json  package.json  suppress-generated-errors.sh
client/src/: App.tsx
grpc-backend/: Cargo.toml  build.rs
grpc-backend/proto/: echo.proto
grpc-backend/src/: logging.rs  main.rs
grpc-backend/src/services/: echo_service.rs  mod.rs
